# libcollections

./: .gitignore  CMakeLists.txt  README.md
include/: collections.h  collections_base.h  collections_slist.h
src/: CMakeLists.txt  collections_int.h  slist.c
tests/: CMakeLists.txt  base_tests.cpp  slist_interface.cpp  test_base.c  test_main.cpp  test_slist.cpp  tests.h
